# build-your-own-super-agents

./: .env.example  .gitignore  01-simple-agent.ipynb  02-framework-pydantic-ai.ipynb  02-reflection.ipynb  03-prompt-engg.ipynb  03-reflection.ipynb  04-rag.ipynb  05-graphrag.ipynb  06-evaluation.ipynb  07-multi-agent-workflows.ipynb  08-model-selection.ipynb  09-model-placement.ipynb  10-appendix-experimentation.ipynb  11-appendix-design-and-deployment.ipynb  README.md  _config.yml  _toc.yml  experimentation.ipynb  pyproject.toml
.github/workflows/: deploy-book.yml
assets/: actor_critic.html  coordinator.html  pokemon.html  random_battle.html
data/: sentiment_eval.jsonl  sorting_eval.jsonl
data/model_placement/: test_prompts.csv  test_prompts_extended.csv  train_prompts.csv  train_prompts_extended.csv
data/model_selection/: profiling_test.csv  profiling_test_extended.csv  profiling_train.csv  profiling_train_extended.csv
data/pokemon_md/: charizard.md  mewtwo.md  pichu.md  pikachu.md  raichu.md  slowpoke.md
data/pokemon_md_extended/: bulbasaur.md
db/falkordb_data/: dump.rdb
db/sample-lancedb/pokemon_pages.lance/_transactions/: 0-9186689f-2dfe-4c7b-8c5b-ded146c5a5c7.txn  1-7eeab5f2-abd8-4d70-8692-b257e7a806bc.txn
db/sample-lancedb/pokemon_pages_tmp.lance/_transactions/: 0-029ed924-37c6-444c-82ab-801aa1474da9.txn  1-69dd9f5a-0aa1-4832-b352-11604730ef12.txn
misc/: Dockerfile
src/: falkordb_setup.py  flakordb_setup.py  graphiti_utils.py  pokemon_showdown_setup.py
(+7 files in other folders)
