[project]
name = "build-your-own-super-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic-ai>=1.9.1",
    "pydantic-graph>=1.9.1",
    "scienceplots>=2.1.1",
    "seaborn>=0.13.2",
]
