[project]
name = "build-your-own-super-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "falkordb>=1.2.0",
    "graphiti-core>=0.22.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lancedb>=0.25.2",
    "langchain-text-splitters>=1.0.0",
    "markdownify>=1.2.0",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "poke-env>=0.10.0",
    "pyarrow>=22.0.0",
    "pydantic-ai>=1.9.1",
    "pydantic-graph>=1.9.1",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "scienceplots>=2.1.1",
    "seaborn>=0.13.2",
    "tantivy>=0.25.0",
    "tiktoken>=0.12.0",
]
